<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootBuyerDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:titleTextColor="@android:color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:id="@+id/imgPreview"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="#EEEEEE"
                android:scaleType="centerCrop"
                android:contentDescription="@string/produce_photo_desc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="16dp" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="4dp" />


            <TextView
                android:id="@+id/tvGrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp" />


            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp" />


            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="4dp" />


            <TextView
                android:id="@+id/tvHarvestDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingBottom="16dp" />


            <EditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_order_quantity"
                android:inputType="numberDecimal" />


            <EditText
                android:id="@+id/etNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note_optional"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                android:minLines="2" />


            <Button
                android:id="@+id/btnOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/place_order"
                android:layout_marginTop="20dp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
